# project-dagster-university

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  setup.py  template.env
dagster_university/_template/: README.md  pyproject.toml
dagster_university/_template/dagster_example_tests/: test_lesson_1.py
dagster_university/ai_driven_data_engineering/: .env.example  Makefile  README.md  docker-compose.yaml  pyproject.toml
dagster_university/ai_driven_data_engineering/dbt_project/: dbt_project.yml  profiles.yml
dagster_university/ai_driven_data_engineering/tests/: conftest.py  pytest.ini  test_asset_check.py  test_defs.py  test_lesson_4.py  test_lesson_5.py  test_lesson_8.py  test_raw_assets.py  test_schedule.py  test_trending_events.py
dagster_university/dagster_and_dbt/: README.md  dagster_cloud.yaml  pyproject.toml  setup.cfg  setup.py
dagster_university/dagster_and_dbt/dagster_and_dbt/: __init__.py  definitions.py  jobs.py  partitions.py  schedules.py  sensors.py
dagster_university/dagster_and_dbt/dagster_and_dbt/assets/: metrics.py  requests.py  trips.py
dagster_university/dagster_and_dbt/dagster_and_dbt/defs/: resources.py
dagster_university/dagster_and_dbt/dagster_and_dbt/lesson_2/: sensors.py
dagster_university/dagster_and_dbt/dagster_and_dbt/lesson_3/: definitions.py  resources.py  schedules.py
dagster_university/dagster_and_dbt/dagster_and_dbt/lesson_4/: jobs.py
dagster_university/dagster_and_dbt/dagster_and_dbt/lesson_5/: jobs.py  partitions.py
dagster_university/dagster_and_dbt/dagster_and_dbt/lesson_6/: jobs.py  sensors.py
dagster_university/dagster_and_dbt/dagster_and_dbt/lesson_7/: definitions.py  jobs.py  project.py  schedules.py
dagster_university/dagster_and_dbt/dagster_and_dbt_tests/: conftest.py  fixtures.py  test_lesson_2.py  test_lesson_3.py  test_lesson_4.py  test_lesson_5.py  test_lesson_6.py  test_lesson_7.py  test_lesson_8.py  test_lesson_starter.py  utils.py
dagster_university/dagster_and_dbt/data/outputs/: trips_by_week.csv
dagster_university/dagster_and_dbt/tests/: fixtures.py  test_lesson_2.py  test_lesson_3.py  test_lesson_4.py  test_lesson_5.py  test_lesson_6.py  test_lesson_7.py  test_lesson_8.py  test_lesson_starter.py
dagster_university/dagster_and_etl/: Makefile  README.md  pyproject.toml  setup.cfg  setup.py  sql_database_pipeline.py
dagster_university/dagster_and_etl/.dlt/: config.toml
dagster_university/dagster_and_etl/dagster_and_etl/: definitions.py
dagster_university/dagster_and_etl/dagster_and_etl_tests/: conftest.py  fixtures.py  nasa_data.py  test_lesson_3.py  test_lesson_4.py  test_lesson_5.py  test_lesson_6.py  test_lesson_7.py  test_lesson_starter.py
dagster_university/dagster_and_etl/dagster_and_etl_tests/localstack/: local_stack.sh
dagster_university/dagster_and_etl/dagster_and_etl_tests/postgres/: postgres_bootstrap.sql
dagster_university/dagster_and_etl/data/source/: 2018-01-22.csv
dagster_university/dagster_and_etl/tests/: docker-compose.yaml  test_lesson_3.py  test_lesson_4.py  test_lesson_5.py  test_lesson_6.py  test_lesson_7.py  test_lesson_starter.py
dagster_university/dagster_and_etl/tests/postgres/: Dockerfile  postgres_bootstrap.sql
dagster_university/dagster_essentials/: README.md  dagster_cloud.yaml  pyproject.toml  setup.cfg  setup.py
dagster_university/dagster_essentials/dagster_essentials/: definitions.py
dagster_university/dagster_essentials/dagster_essentials/assets/: trips.py
dagster_university/dagster_essentials/dagster_essentials/lesson_3/: definitions.py
dagster_university/dagster_essentials/dagster_essentials/lesson_4/: definitions.py
dagster_university/dagster_essentials/dagster_essentials/lesson_6/: definitions.py
dagster_university/dagster_essentials/dagster_essentials/lesson_7/: definitions.py  jobs.py
dagster_university/dagster_essentials/dagster_essentials/lesson_8/: definitions.py  jobs.py  partitions.py
dagster_university/dagster_essentials/dagster_essentials_tests/: conftest.py  test_lesson_3.py  test_lesson_4.py  test_lesson_5.py  test_lesson_6.py  test_lesson_7.py  test_lesson_8.py  test_lesson_9.py  test_lesson_starter.py
dagster_university/dagster_essentials/data/outputs/: trips_by_week.csv
dagster_university/dagster_essentials/src/dagster_essentials/: definitions.py
dagster_university/dagster_essentials/tests/: fixtures.py  run_config.yaml  test_lesson_3.py  test_lesson_4.py  test_lesson_5.py  test_lesson_6.py  test_lesson_7.py  test_lesson_8.py  test_lesson_9.py  test_lesson_starter.py  utils.py
dagster_university/dagster_testing/: Makefile  README.md  pyproject.toml  setup.cfg  setup.py
dagster_university/dagster_testing/.devcontainer/: Dockerfile  devcontainer.json
dagster_university/dagster_testing/dagster_testing/: definitions.py  jobs.py  schedules.py  sensors.py
dagster_university/dagster_testing/dagster_testing/assets/: integration_assets.py  lesson_5.py  lesson_6.py  unit_assets.py
dagster_university/dagster_testing/dagster_testing/defs/: jobs.py  resources.py  schedules.py
dagster_university/dagster_testing/dagster_testing/lesson_1/: assets.py  path.txt
dagster_university/dagster_testing/dagster_testing/lesson_2/: assets.py  definitions.py
dagster_university/dagster_testing/dagster_testing/lesson_3/: assets.py  definitions.py
dagster_university/dagster_testing/dagster_testing/lesson_4/: assets.py  definitions.py
dagster_university/dagster_testing/dagster_testing/lesson_5/: assets.py  definitions.py  jobs.py  resources.py  run_config.yaml  schedules.py  sensors.py
dagster_university/dagster_testing/dagster_testing/lesson_6/: assets.py  jobs.py  (+4 more)
dagster_university/dagster_testing/dagster_testing_tests/: docker-compose.yaml  fixtures.py  lesson_2_run_config.yaml  lesson_3_run_config.yaml  path.txt  pytest.ini  test_lesson_1.py  test_lesson_2.py  test_lesson_3.py  test_lesson_4.py  test_lesson_5.py  test_lesson_6.py
dagster_university/dagster_testing/tests/: docker-compose.yaml  fixtures.py  pytest.ini  test_lesson_3.py  test_lesson_4.py  test_lesson_5.py  test_lesson_6.py
(+924 files in other folders)
