[project]
name = "dagster-and-dbt"
version = "0.0.1"
description = "Dagster and dbt"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "dagster==1.12.4",
    "dagster-dg-cli",
    "dagster-webserver",
    "dagster-cloud",
    "dagster-duckdb",
    "dagster-dbt",
    "dbt-duckdb",
    "geopandas>=1.0.1,<1.1.0",
    "pandas[parquet]",
    "shapely>=2.0.0",
    "matplotlib",
    "smart_open[s3]",
    "s3fs",
    "smart_open",
    "boto3",
    "pyarrow",
    # Pin pyproj to a version that works better with Python 3.13
    "pyproj>=3.7.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["dagster_and_dbt"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_and_dbt"
registry_modules = [
    "dagster_and_dbt.components.*",
]

[tool.ruff.lint]
ignore = [
    "ERA001", # comments are fine for a learning environment
    "E501",   # Line too long for docstrings
    "F401",   # unused imports already caught by pylance
]

fixable = ["ALL"]
unfixable = [
    "F401", # dont remove unused imports
]
