[project]
name = "dagster-etl"
version = "0.0.1"
description = "Dagster ETL"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster==1.10.*",
    "dagster-webserver",
    "dagster-snowflake",
    "dagster-duckdb",
    "dagster-aws",
    "dagster-sling",
    "dagster-dlt",
    "psycopg2-binary",
    "dlt[duckdb]",
    "pandas",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
]

[tool.dagster]
module_name = "dagster_and_etl.definitions"
code_location_name = "dagster_dbt"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_and_etl"]