[project]
name = "dagster-and-etl"
version = "0.0.1"
description = "Dagster ETL"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "dagster==1.12.4",
    "dagster-dg-cli",
    "dagster-webserver",
    "dagster-duckdb",
    "dagster-dlt",
    "dagster-sling",
    "psycopg2-binary",
    "dlt[duckdb]",
    "pandas",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_and_etl"
registry_modules = [
    "dagster_and_etl.components.*",
]

[tool.ruff.lint]
ignore = [
    "ERA001", # comments are fine for a learning environment
    "E501",   # Line too long for docstrings
    "F401",   # unused imports already caught by pylance
]

fixable = ["ALL"]
unfixable = [
    "F401", # dont remove unused imports
]