[project]
name = "dagster-testing"
version = "0.0.1"
description = "Dagster Testing"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster==1.11.8",
    "dagster-dg-cli",
    "dagster-webserver",
    "dagster-snowflake",
    "psycopg2-binary",
    "pytest",
]

[tool.uv]
dev-dependencies = [
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_testing"
registry_modules = [
    "dagster_testing.components.*",
]

[tool.ruff.lint]
ignore = [
    "ERA001", # comments are fine for a learning environment
    "E501",   # Line too long for docstrings
    "F401",   # unused imports already caught by pylance
]

fixable = ["ALL"]
unfixable = [
    "F401", # dont remove unused imports
]
